# airflow-mentoring-2

./: README.md  docker-compose.yaml  pyproject.toml
dags/: demo_001.py  demo_002.py
plugins/engineering/operators/: sleep.py
plugins/engineering/utils/: date.py
